--- a/index.html
+++ b/index.html
@@ -3,10 +3,40 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>East-West Times</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
+
+    <header class="container my-3">
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"><span class="bg-dark text-light rounded pt-2 px-1 fs-4">East-West</span><span class="pt-2 px-1 fs-4">Times</span></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-1 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#"></a>
+                  </li>
+                </ul>
+                <form class="d-flex" role="search">
+                  <a class="text-capitalize mx-3 text-dark" href="#">news</a>
+                  <a class="text-capitalize mx-3 text-dark" href="#">blogs</a>
+                </form>
+              </div>
+            </div>
+          </nav>
+          <hr>
+    </header>
+
+    <main>
+        <section>
+            <div id="catagories-container"></div>
+        </section>
+    </main>
 
 
 
