added news contents

--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
     </header>
 
     <main>
-        <section>
-            <div id="catagories-container"></div>
+        <section class="container">
+            <div id="catagories-container" class="row row-cols-8 d-flex justify-content-evenly mx-2"></div>
+        </section>
+        <section class="container my-5">
+          <div id="catagories-items-container" class="row row-cols-1 g-5"></div>
         </section>
     </main>
 
