--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <title>East-West Times</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
+    <!-- font awesome icons  -->
+    <script src="https://kit.fontawesome.com/726b66089f.js" crossorigin="anonymous"></script>
   </head>
   <body>
 
     <header class="container my-3">
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"><span class="bg-dark text-light rounded pt-2 px-1 fs-4">East-West</span><span class="pt-2 px-1 fs-4">Times</span></a>
+              <a class="navbar-brand logo-font" href="#"><span class="bg-dark text-light rounded pt-2 px-1 fs-4">East-West</span><span class="pt-2 px-1 fs-4">Times</span></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -41,8 +43,9 @@
         </section>
     </main>
 
-
-
+    <footer class="text-center">
+      <p style="font-weight: 500;">Copyright 2022 East-West Times</p>
+    </footer>
 
     <!-- script files  -->
     <script src="js/play.js"></script>
