--- a/index.html
+++ b/index.html
@@ -69,9 +69,7 @@
                   <h5 class="modal-title" id="showDetailsModalLabel"></h5>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div id="modal-body" class="modal-body">
-                  ...
-                </div>
+                <div id="modal-body" class="modal-body"></div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                 </div>
