--- a/index.html
+++ b/index.html
@@ -46,6 +46,28 @@
           <div id="items-founded"></div>
         </section>
 
+        <!-- //items sort section  -->
+        <section class="container my-4 ml-5 pl-5">
+          <div id="items-sorted">
+            <div class="row">
+              <div class="col-12 mx-auto" style="width: 1000px;">
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="d-flex align-items-center">
+                    <p class="bg-dark text-light p-1 rounded" style="margin-top: 15px;">sorted by view</p>
+                  <select class="ms-3" name="selection" id="form-select">
+                    <option value="">default</option>
+                  </select>
+                  </div>
+                  <div class="d-flex">
+                    <button class="btn btn-primary">Today’s Pick</button>
+                    <button class="ms-3 btn btn-light text-dark">Trending</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
         <!-- // catagories items section  -->
         <section class="container my-5">
           <div id="catagories-items-container" class="row row-cols-1 g-5"></div>
