--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
               <div class="col-12 mx-auto" style="width: 1000px;">
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="d-flex align-items-center">
-                    <p class="bg-dark text-light p-1 rounded" style="margin-top: 15px;">sorted by view</p>
+                    <p class="bg-dark text-light p-1 rounded" style="margin-top: 15px;">sorted by</p>
                   <select class="ms-3" name="selection" id="form-select">
+                    <option value="">view</option>
                     <option value="">default</option>
                   </select>
                   </div>
