no data found massage added

--- a/index.html
+++ b/index.html
@@ -69,6 +69,13 @@
           </div>
         </section>
 
+        <!-- //not found data section  -->
+        <section class="container my-5">
+          <div id="data-not-found" class="d-none">
+            <h1 class="text-capitalize text-danger">not found data on this catagory</h1>
+          </div>
+        </section>
+
         <!-- // catagories items section  -->
         <section class="container my-5">
           <div id="catagories-items-container" class="row row-cols-1 g-5"></div>
