--- a/index.html
+++ b/index.html
@@ -1,120 +1,168 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>East-West Times</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles/style.css">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="styles/style.css" />
     <!-- font awesome icons  -->
-    <script src="https://kit.fontawesome.com/726b66089f.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/726b66089f.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-
     <header class="container my-3">
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand logo-font" href="#"><span class="bg-dark text-light rounded pt-2 px-1 fs-4">East-West</span><span class="pt-2 px-1 fs-4">Times</span></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-1 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#"></a>
-                  </li>
-                </ul>
-                <form class="d-flex" role="search">
-                  <a class="text-capitalize mx-3 text-dark" href="#">news</a>
-                  <a class="text-capitalize mx-3 text-dark" href="#">blogs</a>
-                </form>
-              </div>
-            </div>
-          </nav>
-          <hr>
+      <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand logo-font" href="#"
+            ><span class="bg-dark text-light rounded pt-2 px-1 fs-4"
+              >East-West</span
+            ><span class="pt-2 px-1 fs-4">Times</span></a
+          >
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-1 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#"></a>
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <a class="text-capitalize mx-3 text-dark" href="#">news</a>
+              <a class="text-capitalize mx-3 text-dark" href="#">blogs</a>
+            </form>
+          </div>
+        </div>
+      </nav>
+      <hr />
     </header>
 
     <main>
+      <!-- // catagories section  -->
+      <section class="container">
+        <div
+          id="catagories-container"
+          class="row row-cols-md-8 d-flex justify-content-evenly mx-2"
+        ></div>
+      </section>
 
-        <!-- // catagories section  -->
-        <section class="container">
-            <div id="catagories-container" class="row row-cols-8 d-flex justify-content-evenly mx-2"></div>
-        </section>
+      <!-- //items founded section  -->
+      <section class="container my-4 ml-5 pl-5">
+        <div id="items-founded"></div>
+      </section>
 
-        <!-- //items founded section  -->
-        <section class="container my-4 ml-5 pl-5">
-          <div id="items-founded"></div>
-        </section>
-
-        <!-- //items sort section  -->
-        <section class="container my-4 ml-5 pl-5">
-          <div id="items-sorted">
-            <div class="row">
-              <div class="col-12 mx-auto" style="width: 1000px;">
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="d-flex align-items-center">
-                    <p class="bg-dark text-light p-1 rounded" style="margin-top: 15px;">sorted by</p>
+      <!-- //items sort section  -->
+      <section class="container my-4 ml-5 pl-5">
+        <div id="items-sorted">
+          <div class="row">
+            <div class="col-12 mx-auto" style="width: 1000px">
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="d-flex align-items-center">
+                  <p
+                    class="bg-dark text-light p-1 rounded"
+                    style="margin-top: 15px">
+                    sorted by
+                  </p>
                   <select class="ms-3" name="selection" id="form-select">
                     <option value="">view</option>
                     <option value="">default</option>
                   </select>
-                  </div>
-                  <div class="d-flex">
-                    <button class="btn btn-primary">Today’s Pick</button>
-                    <button class="ms-3 btn btn-light text-dark">Trending</button>
-                  </div>
+                </div>
+                <div class="d-flex">
+                  <button class="btn btn-primary">Today’s Pick</button>
+                  <button class="ms-3 btn btn-light text-dark">Trending</button>
                 </div>
               </div>
             </div>
           </div>
-        </section>
+        </div>
+      </section>
 
-        <!-- //not found data section  -->
-        <section class="container my-5">
-          <div id="data-not-found" class="d-none">
-            <h1 class="text-capitalize text-danger">not found data on this catagory</h1>
+      <!-- //not found data section  -->
+      <section class="container my-5">
+        <div id="data-not-found" class="d-none">
+          <h1 class="text-capitalize text-danger">
+            not found data on this catagory
+          </h1>
+        </div>
+      </section>
+
+      <!-- // catagories items section  -->
+      <section class="container my-5">
+        <div id="catagories-items-container" class="row row-cols-1 g-5"></div>
+      </section>
+
+      <!-- // spinner section  -->
+      <section class="d-none" id="spinner">
+        <div class="d-flex justify-content-center" style="margin-top: 200px">
+          <div class="spinner-border text-danger" role="status">
+            <span class="visually-hidden">Loading...</span>
           </div>
-        </section>
+        </div>
+      </section>
 
-        <!-- // catagories items section  -->
-        <section class="container my-5">
-          <div id="catagories-items-container" class="row row-cols-1 g-5"></div>
-        </section>
-
-        <!-- // spinner section  -->
-        <section class="d-none" id="spinner">
-          <div class="d-flex justify-content-center" style="margin-top: 200px;">
-            <div class="spinner-border text-danger" role="status">
-              <span class="visually-hidden">Loading...</span>
-            </div>
-          </div>
-        </section>
-
-        <!--// Modal Section -->
-        <section>
-          <div class="modal fade" id="showDetailsModal" tabindex="-1" aria-labelledby="showDetailsModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="showDetailsModalLabel"></h5>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div id="modal-body" class="modal-body"></div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                </div>
+      <!--// Modal Section -->
+      <section>
+        <div
+          class="modal fade"
+          id="showDetailsModal"
+          tabindex="-1"
+          aria-labelledby="showDetailsModalLabel"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="showDetailsModalLabel"></h5>
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="modal"
+                  aria-label="Close"
+                ></button>
+              </div>
+              <div id="modal-body" class="modal-body"></div>
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-bs-dismiss="modal"
+                >
+                  Close
+                </button>
               </div>
             </div>
           </div>
-        </section>
+        </div>
+      </section>
     </main>
 
     <footer class="text-center">
-      <p style="font-weight: 500;">Copyright 2022 East-West Times</p>
+      <p style="font-weight: 500">Copyright 2022 East-West Times</p>
     </footer>
 
     <!-- script files  -->
     <script src="js/play.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
