--- a/index.html
+++ b/index.html
@@ -71,12 +71,13 @@
       <section class="container my-4 ml-5 pl-5">
         <div id="items-sorted">
           <div class="row">
-            <div class="col-12 mx-auto" style="width: 1000px">
+            <div class="col-12 mx-auto" style="max-width: 1000px">
               <div class="d-flex justify-content-between align-items-center">
                 <div class="d-flex align-items-center">
                   <p
                     class="bg-dark text-light p-1 rounded"
-                    style="margin-top: 15px">
+                    style="margin-top: 15px"
+                  >
                     sorted by
                   </p>
                   <select class="ms-3" name="selection" id="form-select">
