dynamic image added

--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
                 <a class="nav-link active" aria-current="page" href="#"></a>
               </li>
             </ul>
-            <form class="d-flex" role="search">
+            <form class="d-flex align-items-center" role="search">
               <a class="text-capitalize mx-3 text-dark" href="index.html">news</a>
               <a class="text-capitalize mx-3 text-dark" href="blogs.html">blogs</a>
+              <img id="user" class="mx-3 img-fluid" alt="">
             </form>
           </div>
         </div>
