error handling completed

--- a/blogs.html
+++ b/blogs.html
@@ -106,9 +106,9 @@
                       </div>
                     </div>
                     <div class="col-4 col-md-2 mb-1 col-sm-4">
-                      <i class="fa-solid fa-eye"></i>399
+                      <i class="fa-solid fa-eye"></i>  399
                     </div>
-                    <div class="col-6 col-md-3 mt-1 d-none d-md-block">4.5</div>
+                    <div class="col-6 col-md-3 mt-1 d-none d-md-block">rating: 4.5</div>
                     <div
                       class="bg-dark text-md-center text-light rounded p-1 col-auto mt-1 col-md-3 col-sm-3"
                     >
@@ -167,9 +167,9 @@
                       </div>
                     </div>
                     <div class="col-4 col-md-2 mb-1 col-sm-4">
-                      <i class="fa-solid fa-eye"></i>399
+                      <i class="fa-solid fa-eye"></i>  399
                     </div>
-                    <div class="col-6 col-md-3 mt-1 d-none d-md-block">4.5</div>
+                    <div class="col-6 col-md-3 mt-1 d-none d-md-block">rating: 4.5</div>
                     <div
                       class="bg-dark text-md-center text-light rounded p-1 col-auto mt-1 col-md-3 col-sm-3"
                     >
@@ -229,9 +229,9 @@
                       </div>
                     </div>
                     <div class="col-4 col-md-2 mb-1 col-sm-4">
-                      <i class="fa-solid fa-eye"></i>399
+                      <i class="fa-solid fa-eye"></i>  399
                     </div>
-                    <div class="col-6 col-md-3 mt-1 d-none d-md-block">4.5</div>
+                    <div class="col-6 col-md-3 mt-1 d-none d-md-block">rating: 4.5</div>
                     <div
                       class="bg-dark text-md-center text-light rounded p-1 col-auto mt-1 col-md-3 col-sm-3"
                     >
@@ -295,9 +295,9 @@
                       </div>
                     </div>
                     <div class="col-4 col-md-2 mb-1 col-sm-4">
-                      <i class="fa-solid fa-eye"></i>399
+                      <i class="fa-solid fa-eye"></i>  399
                     </div>
-                    <div class="col-6 col-md-3 mt-1 d-none d-md-block">4.5</div>
+                    <div class="col-6 col-md-3 mt-1 d-none d-md-block">rating: 4.5</div>
                     <div
                       class="bg-dark text-md-center text-light rounded p-1 col-auto mt-1 col-md-3 col-sm-3"
                     >
