--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           aria-labelledby="showDetailsModalLabel"
           aria-hidden="true"
         >
-          <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
               <div class="modal-header">
                 <h5 class="modal-title" id="showDetailsModalLabel"></h5>
