blog comment added

--- a/blogs.html
+++ b/blogs.html
@@ -54,13 +54,16 @@
       <hr />
     </header>
 
-          <!-- // bolg section  -->
     <main>
-        <section class="text-center text-dark py-2">
-            <h1><u>read our blogs</u></h1>
-        </section>
+      <!-- title section  -->
+      <section class="text-center text-dark py-2">
+        <h1><u>read our blogs</u></h1>
+      </section>
+
+      <!-- // bolg section  -->
       <section class="container my-5">
         <div id="catagories-items-container">
+          <!-- blog number 1  -->
           <div class="card mb-3 mx-auto p-3 my-5" style="max-width: 1000px">
             <div class="row g-0">
               <div class="col-md-4">
@@ -126,6 +129,7 @@
               </div>
             </div>
           </div>
+          <!-- blog number 2 -->
           <div class="card mb-3 mx-auto p-3 my-5" style="max-width: 1000px">
             <div class="row g-0">
               <div class="col-md-4">
@@ -187,6 +191,7 @@
               </div>
             </div>
           </div>
+          <!-- blog number 3  -->
           <div class="card mb-3 mx-auto p-3 my-5" style="max-width: 1000px">
             <div class="row g-0">
               <div class="col-md-4">
@@ -249,6 +254,7 @@
               </div>
             </div>
           </div>
+          <!-- blog number 4  -->
           <div class="card mb-3 mx-auto p-3 my-5" style="max-width: 1000px">
             <div class="row g-0">
               <div class="col-md-4">
@@ -319,6 +325,7 @@
       </section>
     </main>
 
+    <!-- footer section  -->
     <footer class="text-center">
       <p style="font-weight: 500">Copyright 2022 East-West Times</p>
     </footer>
